update lighbulb-plant illustration: improve contrast, fix centering & shadow, add preview & techniques

--- a/illustrations/lightbulb-plant/style.css
+++ b/illustrations/lightbulb-plant/style.css
@@ -1,6 +1,40 @@
+.illustration-container {
+    width: 100%;
+    height: 100%;
+}
+
 .lightbulb-plant-illustration-container {
     width: 100%;
     height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.styled-section {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #5CA0B4;
+}
+
+.lightbulb-plant-illustration-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+}
+
+.drawing-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%; /* takes full height of parent */
+    position: relative;
 }
 
 /* Color Palette */
@@ -72,7 +106,7 @@ foot: #683c20
 }
 
 .bulb-rectangle {
-    width: 130px;
+    width: 145px;
     height: 50px;
     background-color: #ffe4ab;
     border: 10px solid #fed17e;
@@ -326,7 +360,7 @@ foot: #683c20
     width: 80px;
     height: 30px;
     border-radius: 50%;
-    top: -7px;
+    top: -12px;
     left: -15px;
 }
 
@@ -348,7 +382,7 @@ foot: #683c20
     border-radius: 50%;
     position: absolute;
     z-index: 4;
-    top: -24px;
+    top: -30px;
     right: 10px;
     transform: rotate(10deg);
 }
@@ -400,12 +434,12 @@ foot: #683c20
     width: 450px;
     height: 60px;
     border-radius: 50%;
-    background-color: #f08457;
+    background-color:#4A90A4;
     z-index: -1;
     position: absolute;
     transform: rotate(50deg);
     left: -230px;
-    bottom: 120px;
+    bottom: 100px;
 }
 
 /* Sprout */ 
